// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill /> Spec Snapshots should render selected state 1`] = `
.c1 {
  grid-area: content;
}

.c0 {
  padding: 3px 6px;
  border-radius: 100px;
  border-radius: 4px;
  display: inline-grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  box-sizing: border-box;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 16px;
  color: #ffffff;
  background-color: #77787a;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Pill
    </div>
  </div>
</div>
`;

exports[`<Pill /> Spec Snapshots should render using defaults 1`] = `
.c1 {
  grid-area: content;
}

.c0 {
  padding: 3px 6px;
  border-radius: 100px;
  border-radius: 4px;
  display: inline-grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  box-sizing: border-box;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 16px;
  color: #19191a;
  background-color: rgba(0,0,0,0.1);
}

.c0:hover {
  color: #19191a;
  background-color: rgba(0,0,0,0.15);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Pill
    </div>
  </div>
</div>
`;

exports[`<Pill /> Spec Snapshots should support rendering a pill with icon 1`] = `
.c2 {
  width: 16px;
  height: 16px;
}

.c3 {
  grid-area: content;
}

.c0 {
  padding: 3px 6px;
  border-radius: 100px;
  border-radius: 4px;
  display: inline-grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  box-sizing: border-box;
  font-size: 14px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 16px;
  color: #19191a;
  background-color: rgba(0,0,0,0.1);
}

.c0:hover {
  color: #19191a;
  background-color: rgba(0,0,0,0.15);
}

.c1 {
  grid-area: left-content;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color=""
          height="16"
          name="Checkmark"
          preserveaspectratio="none"
          width="16"
        />
      </div>
    </div>
    <div
      class="c3"
    >
      Pill
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color=""
          height="16"
          name="Checkmark"
          preserveaspectratio="none"
          width="16"
        />
      </div>
    </div>
  </div>
</div>
`;
